--- a/app/src/main/res/layout/list_item_achievements_almost_complete.xml
+++ b/app/src/main/res/layout/list_item_achievements_almost_complete.xml
@@ -1,108 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:background="@color/mainAreaColor"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="@dimen/achievement_progress_icon_size"
-        android:background="@color/mainAreaColor"
-        android:padding="@dimen/padding_around_item_icon"
-        android:layout_height="@dimen/achievement_progress_icon_size">
-        <View
-            android:id="@+id/achievement_icon_circle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/behind_icon_circle"/>
-        <ImageView
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:padding="@dimen/padding_around_item_icon"
-            android:id="@+id/achievement_icon_image"
-            android:src="@drawable/strength_icon_white"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </RelativeLayout>
-
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:background="@color/mainAreaColor"
-        android:paddingTop="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="@dimen/achievement_progress_icon_size"
+            android:background="@color/mainAreaColor"
+            android:padding="@dimen/padding_around_item_icon"
+            android:layout_height="@dimen/achievement_progress_icon_size">
+            <View
+                android:id="@+id/achievement_icon_circle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/behind_icon_circle"/>
+            <ImageView
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/padding_around_item_icon"
+                android:id="@+id/achievement_icon_image"
+                android:src="@drawable/strength_icon_white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </RelativeLayout>
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@color/mainAreaColor"
+            android:paddingTop="10dp">
 
-            <TextView
-                android:id="@+id/achievement_label"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="AchievementTitle"
-                android:textSize="20dp"
-                android:textColor="@color/textColorSecondary"
-                android:gravity="center"
-                android:layout_weight="1"/>
-            <TextView
-                android:id="@+id/achievement_xp_gain"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="+manyxp"
-                android:textSize="14dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/achievement_description"
-                android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/achievement_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="AchievementTitle"
+                    android:textSize="20dp"
+                    android:textColor="@color/textColorSecondary"
+                    android:gravity="center"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/achievement_xp_gain"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="+manyxp"
+                    android:textSize="14dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/achievement_description"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="do dis achievement"
+                    android:textSize="15dp"
+                    android:textColor="@color/textColorSecondary"
+                    android:paddingTop="10dp"
+                    android:gravity="center"
+                    android:paddingBottom="10dp"/>
+                <TextView
+                    android:id="@+id/achievement_quantity_done"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10 / "
+                    android:textColor="@color/textColorSecondary"
+                    android:visibility="gone"/>
+                <TextView
+                    android:id="@+id/achievement_quantity_to_do"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="11"
+                    android:paddingRight="20dp"
+                    android:textColor="@color/textColorSecondary"
+                    android:gravity="center"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+            <ProgressBar
+                android:id="@+id/achievement_progress_bar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="do dis achievement"
-                android:textSize="15dp"
-                android:textColor="@color/textColorSecondary"
-                android:paddingTop="10dp"
-                android:gravity="center"
-                android:paddingBottom="10dp"/>
-            <TextView
-                android:id="@+id/achievement_quantity_done"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10 / "
-                android:textColor="@color/textColorSecondary"
-                android:visibility="gone"/>
-            <TextView
-                android:id="@+id/achievement_quantity_to_do"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11"
                 android:paddingRight="20dp"
-                android:textColor="@color/textColorSecondary"
-                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:layout_weight="1"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:progress="10"
                 android:visibility="gone"/>
 
         </LinearLayout>
-        <ProgressBar
-            android:id="@+id/achievement_progress_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:layout_weight="1"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:progress="10"
-            android:visibility="gone"/>
-
-        <View
-            android:id="@+id/divider_line"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="10dp"
-            android:background="#BBBBBB"/>
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider_line"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="10dp"
+        android:background="#BBBBBB"/>
 </LinearLayout>
