--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/mainAreaColor"
+    android:background="@color/behindMainArea"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="20dp">
