--- a/app/src/main/res/layout/skill_detail_activity.xml
+++ b/app/src/main/res/layout/skill_detail_activity.xml
@@ -8,13 +8,13 @@
     android:background="@color/behindMainArea">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/mainAreaColor">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/wisdom_icon"/>
+            android:id="@+id/detail_page_icon"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -27,15 +27,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Wisdom"
                 android:textSize="40dp"
                 android:textColor="@color/textColorSecondary"
-                android:gravity="center_vertical"/>
+                android:gravity="center_vertical"
+                android:id="@+id/detail_page_skill_title"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Level: 1, Novice"
+                android:id="@+id/detail_page_level_and_level_title"
                 android:textSize="15dp"
                 android:textColor="#AAAAAA"/>
 
@@ -43,13 +43,13 @@
                 android:paddingTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="XP: 4,000,000,000"
+                android:id="@+id/detail_page_xp"
                 android:textColor="@color/textColorSecondary"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="XP To Next Level: 4,000,000"
+                android:id="@+id/detail_page_xp_to_next_level"
                 android:textColor="@color/textColorSecondary"/>
 
         </LinearLayout>
